--- a/exercise4.ipynb
+++ b/exercise4.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "The free variables consist of the following variables of vector X:\n",
     "\n",
-    "$$x1_1 \\rightarrow x2_1 \\rightarrow x1_2 \\rightarrow x2_2 \\cdots x1_{N-1} \\rightarrow x2_{N-1}$$\n",
+    "$$x_{1,2} \\rightarrow x2_1 \\rightarrow x1_2 \\rightarrow x2_2 \\cdots x1_{N-1} \\rightarrow x2_{N-1}$$\n",
     "\n",
     "The first step to determining the gradient is to calculate the partial derivative for every variable:\n",
     "\n",
