--- a/exercise4.ipynb
+++ b/exercise4.ipynb
@@ -62,7 +62,7 @@
     "----\n",
     "\n",
     "\n",
-    "## Exercise 4\n",
+    "## Exercise 4/5\n",
     "What are the free variables of the chain energy $E$  (there should be $2N-2$ in total)?\n",
     "\n",
     "What is the gradient of $E$ with respect to all these variables?\n",
@@ -75,21 +75,21 @@
    "source": [
     "The free variables consist of the following variables of vector X:\n",
     "\n",
-    "$$x_{1,2} \\rightarrow x2_1 \\rightarrow x1_2 \\rightarrow x2_2 \\cdots x1_{N-1} \\rightarrow x2_{N-1}$$\n",
+    "$$x_{1_1} \\rightarrow x_{2_1} \\rightarrow x_{1_2} \\rightarrow x_{2_2} \\cdots x_{1_N-1} \\rightarrow x_{2_N-1}$$\n",
     "\n",
     "The first step to determining the gradient is to calculate the partial derivative for every variable:\n",
     "\n",
-    "$$f'(x1_i) = \\sum \\frac{x1_i}{\\delta x1_i} + \\sum \\frac{(x1_i - x1_{i-1})}{\\delta x1_i} $$  \n",
+    "$$f'(x_1) = \\sum_{i=0}^N \\sum_{j=1}^4 A_j* (2a_j(x_{1_i}- \\hat{x}_1^{(j)})+b_j(x_{2_i}- \\hat{x}_2^{(j)}))*e^{a_j(x_{1_i}- \\hat{x}_1^{(j)}) + b_j(x_{1_i}- \\hat{x}_1^{(j)})(x_{2_i}- \\hat{x}_2^{(j)})} + \\frac k2 \\sum_{i=1}^N(x_{1_i} - x_{1_{i-1}})^2 $$  \n",
     "\n",
-    "$$f'(x2_i) = \\sum \\frac{x2_i}{\\delta x2_i} + \\sum \\frac{(x2_i - x2_{i-1})}{\\delta x2_i} $$ \n",
+    "$$f'(x_2) = \\sum_{i=0}^N \\sum_{j=1}^4 A_j* (2c_j(x_{2_i}- \\hat{x}_2^{(j)})+b_j(x_{1_i}- \\hat{x}_1^{(j)}))*e^{b_j(x_{1_i}- \\hat{x}_1^{(j)})(x_{2_i}- \\hat{x}_2^{(j)}) + c_j(x_{2_i}- \\hat{x}_2^{(j)})^2} + \\frac k2 \\sum_{i=1}^N(x_{2_i} - x_{2_{i-1}})^2 $$ \n",
     "\n",
     "Now we can determine the gradient as follows:\n",
     "$$\\nabla E(x1,x2)=\n",
-    "\\left|\\frac{\\sum x1_i + \\sum (x1_i - x1_{i-1})}{\\delta x1_1}\\\\\n",
-    "\\frac{\\sum x2_i + \\sum (x2_i - x2_{i-1})}{\\delta x2_1}\\\\\n",
+    "\\begin{pmatrix}  \\sum_{j=1}^4 A_j*(2a_j(x_{1_1}- \\hat{x}_1^{(j)})+b_j(x_{2_1}- \\hat{x}_2^{(j)}))*e^{a_j(x_{1_1}- \\hat{x}_1^{(j)}) + b_j(x_{1_1}- \\hat{x}_1^{(j)})(x_{2_1}- \\hat{x}_2^{(j)})} + \\frac k2(x_{1_1} - x_{1_0})^2\\\\   \n",
+    " \\sum_{j=1}^4 A_j*(2c_j(x_{2_2}- \\hat{x}_2^{(j)})+b_j(x_{1_2}- \\hat{x}_1^{(j)}))*e^{b_j(x_{1_1}- \\hat{x}_1^{(j)})(x_{2_1}- \\hat{x}_2^{(j)}) + c_j(x_{2_1}- \\hat{x}_2^{(j)})^2} +\\frac k2(x_{2_1} - x_{2_0})^2\\\\\n",
     "\\vdots\\\\\n",
-    "\\frac{\\sum x1_i + \\sum (x1_i - x1_{i-1})}{\\delta x1_{N-1}}\\\\\n",
-    "\\frac{\\sum x2_i + \\sum (x2_i - x2_{i-1})}{\\delta x2_{N-1}}\\right |$$\n",
+    "\\sum_{j=1}^4 A_j*(2a_j(x_{1_{n-1}}- \\hat{x}_1^{(j)})+b_j(x_{2_{n-1}}- \\hat{x}_2^{(j)}))*e^{a_j(x_{1_{n-1}}- \\hat{x}_1^{(j)}) + b_j(x_{1_{n-1}}- \\hat{x}_1^{(j)})(x_{2_{n-1}}- \\hat{x}_2^{(j)})} + \\frac k2 (x_{1_{n-1}} - x_{1_{n-2}})^2\\\\\n",
+    "\\sum_{j=1}^4 A_j*(2c_j(x_{2_{n-1}}- \\hat{x}_2^{(j)})+b_j(x_{1_{n-1}}- \\hat{x}_1^{(j)}))*e^{b_j(x_{1_{n-1}}- \\hat{x}_1^{(j)})(x_{2_{n-1}}- \\hat{x}_2^{(j)}) + c_j(x_{2_{n-1}}- \\hat{x}_2^{(j)})^2} + \\frac k2 (x_{2_{n-1}} - x_{2_{n-2}})^2 \\end{pmatrix} $$\n",
     "\n"
    ]
   },
@@ -98,26 +98,58 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def Vx2(x1, x2, A, a, b, C, xbar1, xbar2):\n",
+    "    return np.sum([\n",
+    "        A[i] * (2*(a[i]*(x1-xbar1[i])**2)+b*(x2-xbar2[i])) * np.exp((a[i] * (x1 - xbar1[i])**2) + (b[i] * (x1 - xbar1[i])) *\n",
+    "                      (x2 - xbar2[i]) + C[i] * (x2 - xbar2[i])**2)\n",
+    "        for i in range(len(A))\n",
+    "    ])\n",
+    "\n",
+    "def Vx3(x1, x2, A, a, b, C, xbar1, xbar2):\n",
+    "    return np.sum([\n",
+    "        A[i]* (2*(c[i]*(x2-xbar2[i])**2)+b*(x1-xbar1[i]))*() np.exp((a[i] * (x1 - xbar1[i])**2) + (b[i] * (x1 - xbar1[i])) *\n",
+    "                      (x2 - xbar2[i]) + C[i] * (x2 - xbar2[i])**2)\n",
+    "        for i in range(len(A))\n",
+    "    ])\n",
+    "\n",
+    "\n",
+    "def gradient_descent():\n",
+    "    #for loop i\n",
+    "    deltav_x1 = Vx2(x1, x2, A, a, b, C, xbar1, xbar2)\n",
+    "    deltav_x2 = Vx3(x1, x2, A, a, b, C, xbar1, xbar2)\n",
+    "    \n",
+    "    prev_grad= gradient[i]\n",
+    "    grad_x1=deltav_x[i] + k/2*(x_1[i] - x_1[i-1])\n",
+    "    grad_x2=deltav_x2[i] + k/2*(x_1[i] - x_1[i-1])    \n",
+    "    \n",
+    "    gradient[i]=[grad_x1,grad_x2]\n",
+    "    \n",
+    "    #determine gradient direction\n",
+    "    \n",
+    "    gradient[i+1]=prev_grad+grad_direction*gradient[i]\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   },
   "toc": {
    "base_numbering": 1,
