--- a/finalCode.ipynb
+++ b/finalCode.ipynb
@@ -379,7 +379,6 @@
     "            #If the value of theta changes less of a certain amount, our goal is met.\n",
     "            if abs(temptheta - theta) < precision and abs(temptheta1 -\n",
     "                                                          theta1) < precision:\n",
-    "                print(\"Love and kisses <3\")\n",
     "                return x1Data, x2Data, VData, iterations\n",
     "\n",
     "            #Simultaneous update\n",
@@ -514,10 +513,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-12-15T20:56:00.986377Z",
+     "start_time": "2018-12-15T20:56:00.062794Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-146.67901464,  -80.76687618, -108.16535922])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import scipy.ndimage.filters as filters\n",
+    "import scipy.ndimage.morphology as morphology\n",
+    "\n",
+    "def detect_local_minima(arr):\n",
+    "    \"\"\"\n",
+    "    Takes an array and detects the troughs using the local maximum filter.\n",
+    "    Returns a boolean mask of the troughs (i.e. 1 when\n",
+    "    the pixel's value is the neighborhood maximum, 0 otherwise)\n",
+    "    \"\"\"\n",
+    "    neighborhood = morphology.generate_binary_structure(len(arr.shape),2)\n",
+    "    local_min = (filters.minimum_filter(arr, footprint=neighborhood)==arr)\n",
+    "    background = (arr==0)\n",
+    "    eroded_background = morphology.binary_erosion(\n",
+    "        background, structure=neighborhood, border_value=1)\n",
+    "    detected_minima = local_min ^ eroded_background\n",
+    "    return np.where(detected_minima)\n",
+    "\n",
+    "X = np.array(np.linspace(xmin, xmax, 200))\n",
+    "Y = np.array(np.linspace(ymin, ymax, 200))\n",
+    "Z = []\n",
+    "\n",
+    "for x1val in X:\n",
+    "    temp = []\n",
+    "    for x2val in Y:\n",
+    "        V = Vx(x1val, x2val, A, a, b, c, xbar1, xbar2)\n",
+    "        if V > 100:\n",
+    "            temp.append(0)\n",
+    "        else:\n",
+    "            temp.append(V)\n",
+    "    Z.append(temp)\n",
+    "Z = np.array(Z)\n",
+    "\n",
+    "Z[detect_local_minima(Z)][Z[detect_local_minima(Z)]<0]"
+   ]
   }
  ],
  "metadata": {
